creusot/tests/should_fail/prusti/logic/ghost.stderr
error: final operator
 --> ghost.rs:6:5
  |
6 |    *x
  |     ^
  |
note: the lint level is defined here
 --> ghost.rs:4:1
  |
4 | #[ghost('x)]
  | ^^^^^^^^^^^^
  = note: this error originates in the attribute macro `ghost` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: function `fin` is never used
 --> ghost.rs:5:4
  |
5 | fn fin<'curr, 'x, X>(x: &'curr mut X) -> X {
  |    ^^^
  |
  = note: `#[warn(dead_code)]` on by default

error: aborting due to previous error; 1 warning emitted

thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: ErrorGuaranteed(())', cargo-creusot/src/bin/creusot-rustc.rs:139:55
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

note: Creusot has panic-ed!
  |
  = note: Oops, that shouldn't have happened, sorry about that.
  = note: Please report this bug over here: https://github.com/xldenis/creusot/issues/new

